flux/apps/jellyfin-proxy/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin
  namespace: jellyfin-proxy
  labels:
    kubernetes.io/service-name: jellyfin
spec:
  addressType: IPv4
  endpoints:
    - addresses:
        - 10.0.0.5
  ports:
    - name: http
      protocol: TCP
      port: 8096
