flux/apps/jellyfin-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8096
      protocol: TCP
